--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,9 @@
 #
 # This file contains configuration flags to customize your site
 #
+remote_theme: pages-themes/tactile@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 
 # Name of your site (displayed in the header)
 name: Jeremiah's Blog
